--- a/docker-build.yml
+++ b/docker-build.yml
@@ -25,7 +25,7 @@ variables:
         --cache=true
         --cache-repo "${CI_REGISTRY_IMAGE}/cache"
         --reproducible
-        --destination "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"
+        --destination "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE}"
 
 .manifest:
   image: docker:19
