--- a/docker-build.yml
+++ b/docker-build.yml
@@ -33,7 +33,7 @@ variables:
     - docker
   script:
     # Push manifest
-    - docker run lansibl/manifest-tool:master push from-args
+    - docker run lansible/manifest-tool:master push from-args
         --platforms linux/amd64,linux/arm64
         --template "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-ARCH"
         --target "${DOCKER_IMAGE_NAME}:${DOCKER_MANIFEST_TAG}"
