--- a/sast-cis-benchmark.yml
+++ b/sast-cis-benchmark.yml
@@ -1,6 +1,8 @@
 # Run CIS benchmarks against the images/containers
 sast_cis_benchmark:
   image: docker:19.03-dind
+  services:
+    - docker:19.03-dind
   stage: test
   tags:
     - docker
