--- a/docker-build.yml
+++ b/docker-build.yml
@@ -34,7 +34,9 @@ variables:
   script:
     # Push manifest
     - manifest-tool push from-args
-        --platforms linux/amd64,linux/arm64
+        --ignore-missing
+        --docker-cfg /kaniko/.docker/config.json
+        --platforms linux/amd64,linux/arm64,linux/arm
         --template "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-ARCH"
         --target "${DOCKER_IMAGE_NAME}:${DOCKER_MANIFEST_TAG}"
 
