--- a/docker-build.yml
+++ b/docker-build.yml
@@ -33,9 +33,10 @@ variables:
     - docker
   script:
     # Push manifest
-    - manifest-tool push from-args
-        --ignore-missing
+    - manifest-tool 
         --docker-cfg /kaniko/.docker/config.json
+      push from-args
+        --ignore-missing
         --platforms linux/amd64,linux/arm64,linux/arm
         --template "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-ARCH"
         --target "${DOCKER_IMAGE_NAME}:${DOCKER_MANIFEST_TAG}"
