--- a/docker-build.yml
+++ b/docker-build.yml
@@ -33,7 +33,7 @@ variables:
     - docker
   script:
     # Pull images to be able to create a manifest
-    - for arch in linux/amd64 linux/arm64 linux/arm; do
+    - for arch in amd64 arm64 arm; do
         docker pull "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${arch}" || true;
       done
     # Push manifest
