feat: adds push readme stage
Signed-off-by: wilmaro <w.denouden@intermax.nl>

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -117,3 +117,29 @@ push_tag_manifest:
   variables:
     DOCKER_MANIFEST_TAG: latest
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}
+
+
+# Push readme to Docker Hub
+# https://www.sanisimov.com/2019/03/building-docker-images-for-multiple-architectures/
+push_readme:
+  stage: manifest
+  script:
+    - >
+      token=$(
+        curl -s -X POST
+          -H "Content-Type: application/json"
+          -d "{\"username\": \"$DOCKER_USERNAME\", \"password\": \"$DOCKER_PASSWORD\"}"
+          https://hub.docker.com/v2/users/login/
+        | jq -r .token
+      )
+    - >
+      jq -n --arg msg "$(<README.md)" '{"registry":"registry-1.docker.io","full_description": $msg }'
+      | curl -s -o /dev/null -L -w "%{http_code}"
+          https://cloud.docker.com/v2/repositories/"${image}"/
+          -d @- -X PATCH
+          -H "Content-Type: application/json"
+          -H "Authorization: JWT ${token}"
+  only:
+  - tags
+  except:
+    - branches
