--- a/docker-build.yml
+++ b/docker-build.yml
@@ -112,7 +112,7 @@ push_tag_manifest:
     DOCKER_MANIFEST_TAG: ${CI_COMMIT_TAG}
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}
 
-push_tag_manifest:
+push_latest_manifest:
   extends: .manifest_tag
   variables:
     DOCKER_MANIFEST_TAG: latest
