fix: adds dind service to build
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -4,10 +4,12 @@ variables:
   DOCKER_IMAGE_NAME: "${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}"
 
 .build:
+  image: docker:19
   tags:
     - local  # do not run on shared runner
     - docker
-  image: docker:19
+  services:
+    - docker:19-dind
   script:
     # Pull build stage image to use as cache
     # Might not exist so use || true
