--- a/docker-build.yml
+++ b/docker-build.yml
@@ -2,6 +2,7 @@
 variables:
   # You should overide this variable in the subsequent gitlab-ci file
   DOCKER_IMAGE_NAME: "${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}"
+  BUILD_ARGS: ""
 
 .build:
   tags:
@@ -21,7 +22,7 @@ variables:
     # Build and push container
     - docker build
         --cache-from ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}-${ARCHITECTURE}
-        --build-arg "ARCHITECTURE=${ARCHITECTURE}"
+        --build-arg "ARCHITECTURE=${ARCHITECTURE} ${BUILD_ARGS}"
         --label "org.label-schema.build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
         --label "org.label-schema.name='${CI_PROJECT_TITLE}'"
         --label "org.label-schema.url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
