--- a/docker-build.yml
+++ b/docker-build.yml
@@ -22,7 +22,8 @@ variables:
     # Show command to run
     - echo docker build
         --cache-from ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}-${ARCHITECTURE}
-        --build-arg "ARCHITECTURE=${ARCHITECTURE} ${BUILD_ARGS}"
+        --build-arg "ARCHITECTURE=${ARCHITECTURE}"
+        ${BUILD_ARGS}
         --label "org.label-schema.build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
         --label "org.label-schema.name='${CI_PROJECT_TITLE}'"
         --label "org.label-schema.url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
@@ -36,7 +37,8 @@ variables:
     # Build and push container
     - docker build
         --cache-from ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}-${ARCHITECTURE}
-        --build-arg "ARCHITECTURE=${ARCHITECTURE} ${BUILD_ARGS}"
+        --build-arg "ARCHITECTURE=${ARCHITECTURE}"
+        ${BUILD_ARGS}
         --label "org.label-schema.build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
         --label "org.label-schema.name='${CI_PROJECT_TITLE}'"
         --label "org.label-schema.url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
