--- a/docker-build.yml
+++ b/docker-build.yml
@@ -80,8 +80,8 @@ stages:
     # Get last part of job name as architecture
     - export ARCHITECTURE=$(echo ${CI_JOB_NAME} | grep -o '[^_]*$')
     # Pull previous build image for retagging
-    - for i in 1 2 3 4 5 6 7 8 9 10; do
-        docker pull ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}-${ARCHITECTURE} && break || sleep 30s;
+    - for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30; do
+        docker pull ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}-${ARCHITECTURE} && break || sleep 3m;
       done
     # Retag source to target image
     # Loop since the image might not have been pushed yet
