--- a/docker-build.yml
+++ b/docker-build.yml
@@ -17,48 +17,50 @@ variables:
   # no need to run for tags, image commit should be built already
   except:
     - tags
+  before_script:
+    # Setup buildx not default bundled
+    # https://github.com/docker/buildx/#binary-release
+    - mkdir -p /root/.docker/cli-plugins/
+    - wget -O ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.5.1/buildx-v0.5.1.linux-amd64
+    - chmod a+x ~/.docker/cli-plugins/docker-buildx
   script:
-    # Register needed qemu binaries
-    - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-
     # Get last part of job name as architecture
     - export ARCHITECTURE=$(echo ${CI_JOB_NAME} | grep -o '[^_]*$')
 
-    # Use latest branch imaga as a cache
-    # Might not exist so use || true
-    - docker pull ${DOCKER_IMAGE_NAME}:${CI_COMMIT_REF_SLUG}-${ARCHITECTURE} || true
+    # Register qemu cross compile for other then host arch (amd64)
+    - if [ "${ARCHITECTURE}" != "amd64" ]; then
+        docker run --rm --privileged tonistiigi/binfmt --install ${ARCHITECTURE};
+      fi
 
     # Show command to run
-    - echo docker build
-        --cache-from ${DOCKER_IMAGE_NAME}:${CI_COMMIT_REF_SLUG}-${ARCHITECTURE}
-        --build-arg "ARCHITECTURE=${ARCHITECTURE}"
+    - echo docker buildx build
+        --platform=linux/${ARCHITECTURE}
+        --progress=plain
         ${BUILD_ARGS}
-        --label "org.label-schema.build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-        --label "org.label-schema.name='${CI_PROJECT_TITLE}'"
-        --label "org.label-schema.url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
-        --label "org.label-schema.vcs-ref='${CI_COMMIT_SHA}'"
-        --label "org.label-schema.vcs-url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
-        --label "org.label-schema.vendor=LANsible"
-        --label "org.label-schema.version='${CI_COMMIT_REF_SLUG}'"
-        --label "org.label-schema.schema-version='1.0'"
-        --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE} .
+        --label "org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+        --label "org.opencontainers.image.authors='Wilmar den Ouden <info@wilmardenouden.nl>'"
+        --label "org.opencontainers.image.documentation='https://github.com/LANsible/${CI_PROJECT_NAME}'"
+        --label "org.opencontainers.image.source='https://github.com/LANsible/${CI_PROJECT_NAME}'"
+        --label "org.opencontainers.image.version='${CI_COMMIT_REF_SLUG}'"
+        --label "org.opencontainers.image.vendor=LANsible"
+        --label "org.opencontainers.image.title='${CI_PROJECT_TITLE}'"
+        --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE}
+        --push .
 
     # Build and push container
-    - docker build
-        --cache-from ${DOCKER_IMAGE_NAME}:${CI_COMMIT_REF_SLUG}-${ARCHITECTURE}
-        --build-arg "ARCHITECTURE=${ARCHITECTURE}"
+    - docker buildx build
+        --platform=linux/${ARCHITECTURE}
+        --progress=plain
         ${BUILD_ARGS}
-        --label "org.label-schema.build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-        --label "org.label-schema.name='${CI_PROJECT_TITLE}'"
-        --label "org.label-schema.url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
-        --label "org.label-schema.vcs-ref='${CI_COMMIT_SHA}'"
-        --label "org.label-schema.vcs-url='https://github.com/LANsible/${CI_PROJECT_NAME}'"
-        --label "org.label-schema.vendor=LANsible"
-        --label "org.label-schema.version='${CI_COMMIT_REF_SLUG}'"
-        --label "org.label-schema.schema-version='1.0'"
-        --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE} .
-
-    - docker push ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE}
+        --label "org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+        --label "org.opencontainers.image.authors='Wilmar den Ouden <info@wilmardenouden.nl>'"
+        --label "org.opencontainers.image.documentation='https://github.com/LANsible/${CI_PROJECT_NAME}'"
+        --label "org.opencontainers.image.source='https://github.com/LANsible/${CI_PROJECT_NAME}'"
+        --label "org.opencontainers.image.version='${CI_COMMIT_REF_SLUG}'"
+        --label "org.opencontainers.image.vendor=LANsible"
+        --label "org.opencontainers.image.title='${CI_PROJECT_TITLE}'"
+        --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE}
+        --push .
 
 .retag:
   variables:
@@ -70,11 +72,10 @@ variables:
     - export ARCHITECTURE=$(echo ${CI_JOB_NAME} | grep -o '[^_]*$')
     # Pull previous build image for retagging
     - for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30; do
-        docker pull ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}-${ARCHITECTURE} && break || sleep 3m;
+        docker pull ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}&& break || sleep 3m;
       done
     # Retag source to target image
-    # Loop since the image might not have been pushed yet
-    - echo "Tagging ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}-${ARCHITECTURE} to
+    - echo "Tagging ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG} to
         ${TARGET_DOCKER_IMAGE_NAME}:${TARGET_DOCKER_IMAGE_TAG}-${ARCHITECTURE}"
     - docker tag
         ${SOURCE_DOCKER_IMAGE_NAME}:${SOURCE_DOCKER_IMAGE_TAG}-${ARCHITECTURE}
