--- a/default.yml
+++ b/default.yml
@@ -7,9 +7,9 @@ stages:
   - manifest
 
 default:
-  image: docker:20.10.7
+  image: docker:20.10.12-alpine3.15
   services:
-    - docker:20.10.7-dind
+    - docker:20.10.12-dind-alpine3.15
   # Default use docker
   tags:
     - docker
