--- a/docker-build.yml
+++ b/docker-build.yml
@@ -11,14 +11,10 @@ variables:
   # Use to override when --help exists with a non zero code
   DOCKER_TEST_COMMAND: --help
 
-.setup_buildx:
+.setup_qemu:
   script:
-    # Setup buildx not default bundled in docker/docker image
-    # https://github.com/docker/buildx/#binary-release
-    - mkdir -p /root/.docker/cli-plugins/
-    - wget -O ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.7.1/buildx-v0.7.1.linux-amd64
-    - chmod a+x ~/.docker/cli-plugins/docker-buildx
-
+    # Enable buildkit
+    - export DOCKER_BUILDKIT=1
     # Get last part of job name as architecture
     - export ARCHITECTURE=$(echo ${CI_JOB_NAME} | grep -o '[^_]*$')
 
@@ -44,14 +40,15 @@ variables:
     paths:
       - .docker/cache
   script:
-    - !reference [.setup_buildx, script]
+    - !reference [.setup_qemu, script]
 
     # Show command to run
-    - echo docker buildx build
+    - echo docker build
         --platform=linux/${ARCHITECTURE}
         --progress=plain
         --cache-from=type=local,src=.docker/cache
         --cache-to=type=local,dest=.docker/cache,mode=max
+        --build-arg BUILDKIT_INLINE_CACHE=1
         ${BUILD_ARGS}
         --label "org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
         --label "org.opencontainers.image.authors='Wilmar den Ouden <info@wilmardenouden.nl>'"
@@ -64,11 +61,12 @@ variables:
         --push .
 
     # Build and push container
-    - docker buildx build
+    - docker build
         --platform=linux/${ARCHITECTURE}
         --progress=plain
         --cache-from=type=local,src=.docker/cache
         --cache-to=type=local,dest=.docker/cache,mode=max
+        --build-arg BUILDKIT_INLINE_CACHE=1
         ${BUILD_ARGS}
         --label "org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
         --label "org.opencontainers.image.authors='Wilmar den Ouden <info@wilmardenouden.nl>'"
@@ -91,7 +89,7 @@ variables:
     DOCKER_IMAGE_NAME: ${CI_REGISTRY_IMAGE}
     DOCKER_IMAGE_TAG: ${CI_COMMIT_SHA}
   script:
-    - !reference [.setup_buildx, script]
+    - !reference [.setup_qemu, script]
     - docker run --platform=linux/${ARCHITECTURE} ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${ARCHITECTURE} ${DOCKER_TEST_COMMAND}
   # no need to run for tags, image commit should be built already
   except:
