--- a/default.yml
+++ b/default.yml
@@ -7,9 +7,9 @@ stages:
   - manifest
 
 default:
-  image: docker:20.10.12-alpine3.15
+  image: docker:22.06.0-beta.0-alpine3.16
   services:
-    - docker:20.10.12-dind-alpine3.15
+    - docker:22.06.0-beta.0-dind-alpine3.16
   tags:
     - local  # do not run on shared runner
   before_script:
